[project]
name = "lumina-health"
version = "0.1.0"
description = "Lumina Health Coach Agent - Clinically-grounded AI Wellness Companion"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.111.0",
    "uvicorn>=0.30.0",
    "google-antigravity>=0.1.3",
    "python-dotenv>=1.0.1",
]

[tool.uv]
dev-dependencies = [
    "pytest>=8.0.0",
]
