[project]
name = "lumina-health"
version = "0.1.0"
description = "Lumina Health Coach Agent - Clinically-grounded AI Wellness Companion"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.111.0",
    "uvicorn>=0.30.0",
    "google-antigravity>=0.1.3",
    "python-dotenv>=1.0.1",
    "google-adk[gcp]>=2.0.0,<3.0.0",
    "opentelemetry-instrumentation-google-genai>=0.1.0,<1.0.0",
    "gcsfs>=2024.11.0",
    "google-cloud-logging>=3.12.0,<4.0.0",
    "google-cloud-aiplatform[agent-engines,evaluation]>=1.156.0",
    "protobuf>=6.31.1,<7.0.0",
]

[tool.uv]
dev-dependencies = [
    "pytest>=8.0.0",
]
